--- a/Android/app/src/main/res/layout/activity_9_test_nf.xml
+++ b/Android/app/src/main/res/layout/activity_9_test_nf.xml
@@ -49,14 +49,13 @@
                 android:textStyle="bold" />
 
             <ImageButton
-                android:id="@+id/ibtn_mpmypage"
+                android:id="@+id/ibtn_f5"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="#673AB7"
                 android:padding="7dp"
                 android:scaleType="fitCenter"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/person" />
+                app:srcCompat="@drawable/f5" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -69,34 +68,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/btn_f5"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="4dp"
-                android:text="새로고침"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_rv"
